Themes, fonts, colors, updated. Made themes dynamically update to remove the hardcoded part. Easier to maintain, less spots to update when making themes. Removed some fonts no one will probably use. Added some themes I think teachers would like... such as Scribble Pad and Blue Pen.

--- a/index.html
+++ b/index.html
@@ -106,25 +106,12 @@
                     </div>
                     <div class="w-100 mb-2">
                         <label for="theme-select" class="form-label small">Theme</label>
-                        <select class="form-select form-select-sm" id="theme-select">
-                            <option value="dark">Dark</option>
-                            <option value="light">Light</option>
-                            <option value="solarized">Solarized</option>
-                            <option value="hacker">Hacker</option>
-                            <option value="moooo">Moooo</option>
-                            <option value="cherry">Cherry Blossom</option>
-                            <option value="belgian">Belgian Evergreen</option>
-                            <option value="retrowave">Retrowave</option>
-                            <option value="glitchcore">Glitchcore</option>
-                            <option value="ghostscript">Ghostscript</option>
-                            <option value="spaceodyssey">Space Odyssey</option>
-                            <option value="sakura">Sakura</option>
-                        </select>
+                        <select class="form-select form-select-sm" id="theme-select"></select>
+                        <small class="form-text text-muted">Note: Selecting a theme overrides custom colors and font.</small>
                     </div>
                     <div class="w-100 mb-2">
                         <label for="font-select" class="form-label small">Font</label>
                         <select class="form-select form-select-sm" id="font-select">
-                            <option value="Blaka Ink">Blaka Ink</option>
                             <option value="Bungee">Bungee</option>
                             <option value="Bungee Hairline">Bungee Hairline</option>
                             <option value="Bungee Inline">Bungee Inline</option>
@@ -132,32 +119,34 @@
                             <option value="Bungee Shade">Bungee Shade</option>
                             <option value="Cherry Bomb One">Cherry Bomb One</option>
                             <option value="Coral Pixels">Coral Pixels</option>
-                            <option value="Dancing Script">Dancing Script</option>
-                            <option value="Dosis">Dosis</option>
                             <option value="Doto">Doto</option>
                             <option value="Hanalei">Hanalei</option>
-                            <option value="Hanalei Fill">Hanalei Fill</option>
                             <option value="Honk">Honk</option>
                             <option value="Inter">Inter</option>
-                            <option value="Kablammo">Kablammo</option>
-                            <option value="Micro 5">Micro 5</option>
-                            <option value="Modak">Modak</option>
-                            <option value="Moirai One">Moirai One</option>
-                            <option value="Monofett">Monofett</option>
                             <option value="Monoton">Monoton</option>
                             <option value="Moo Lah Lah">Moo Lah Lah</option>
                             <option value="Nabla">Nabla</option>
                             <option value="Orbitron">Orbitron</option>
-                            <option value="Rubik Bubbles">Rubik Bubbles</option>
-                            <option value="Rubik Distressed">Rubik Distressed</option>
+                            <option value="Patrick Hand">Patrick Hand</option>
+                            <option value="Poppins">Poppins</option>
+                            <option value="Roboto Mono">Roboto Mono</option>
+                            <option value="Rubik Broken Fax">Rubik Broken Fax</option>
+                            <option value="Rubik Burned">Rubik Burned</option>
+                            <option value="Rubik Dirt">Rubik Dirt</option>
+                            <option value="Rubik Doodle Shadow">Rubik Doodle Shadow</option>
                             <option value="Rubik Glitch">Rubik Glitch</option>
-                            <option value="Rubik Moonrocks">Rubik Moonrocks</option>
-                            <option value="Rubik Spray Paint">Rubik Spray Paint</option>
-                            <option value="Rubik Wet Paint">Rubik Wet Paint</option>
-                            <option value="Shantell Sans">Shantell Sans</option>
-                            <option value="Tagesschrift">Tagesschrift</option>
+                            <option value="Rubik Glitch Pop">Rubik Glitch Pop</option>
+                            <option value="Rubik Iso">Rubik Iso</option>
+                            <option value="Rubik Lines">Rubik Lines</option>
+                            <option value="Rubik Marker Hatch">Rubik Marker Hatch</option>
+                            <option value="Rubik Maze">Rubik Maze</option>
+                            <option value="Rubik Pixels">Rubik Pixels</option>
+                            <option value="Rubik Puddles">Rubik Puddles</option>
+                            <option value="Rubik Scribble">Rubik Scribble</option>
+                            <option value="Rubik Vinyl">Rubik Vinyl</option>
                             <option value="Sawarabi Mincho">Sawarabi Mincho</option>
-                            <option value="Press Start 2P">Press Start 2P</option>
+                            <option value="Shadows Into Light Two">Shadows Into Light Two</option>
+                            <option value="Tagesschrift">Tagesschrift</option>
                             <option disabled>──────────</option>
                             <option value="sans-serif">Sans</option>
                             <option value="serif">Serif</option>
